--- a/symbol/index.html
+++ b/symbol/index.html
@@ -142,6 +142,7 @@
 														       <div class="collapse show" id="collapse-3" data-parent="#accordion3">
 														          <div class="accordion-item-body">
 														              <p>- 보다 진보된 기술로 재미있고 멋진 서비스를 연구하고 개발합니다</p>
+														              <p>- 보다 진보된 기술로 쉽고 안전한 드론 서비스를 연구/개발합니다</p>
 														              <p>- 즐겁고 재미있게 일하기 위한 진보된 플랫폼</p>														              														              
 														          </div>
 														       </div>
@@ -164,7 +165,7 @@
 														       </div>
 														       <div class="collapse show" id="collapse-3" data-parent="#accordion3">
 														          <div class="accordion-item-body">
-														              <p>- 소개:<BR>보다 진보된 기술로 재미있고 멋진 드론 및 데이터 서비스를 연구하고 개발하는 스타트업입니다</p>
+														              <p>- 소개:<BR>보다 진보된 기술로 쉽고 안전한 드론 서비스를 연구/개발하는 스타트업 입니다</p>
 														              <p>- 주요 제품 및 서비스:<BR>드론 SW 및 데이터 서비스 플랫폼</p>
 														          </div>
 														       </div>
@@ -188,8 +189,7 @@
 													       <div class="collapse show" id="collapse-5" data-parent="#accordion5">
 													          <div class="accordion-item-body">
 													              <p>
-													              	중소기업과 개인이 드론을 안전하게 비행시키고 품질 좋은 산출물을 얻을 수 있으며 부가적인 수익까지 얻을 수 있는 SW를 개발합니다. 이를 통해 중소기업의 성장을 돕고 양질의 일자리를 창출할 수 있을 것으로 기대합니다.<br>
-뿐만 아니라, 중소 드론 서비스 기업과 개인이 보유 역량 외의 서비스에 대응할 수 있고 역량을 확장할 수 있는 플랫폼을 개발합니다. 기존의 드론 서비스에 다양한 기술을 연결하여 새로운 서비스가 창출될 수 있도록 만들어 드론 산업의 다양성이 생기고 중소기업이 차별화된 경쟁력을 확보할 수 있도록 돕습니다.
+													              	드론 서비스 기업이 요구하는 SW를 제공합니다. 전문가 기술을 연결하여 드론 서비스 기업들이 다양한 수요에 대응할 수 있고 역량을 확장할 수 있는 빅데이터, AI, AR 기반의 기술 연결 및 데이터 서비스 플랫폼을 개발합니다.
 													              </p>
 													          </div>
 													       </div>
@@ -212,8 +212,8 @@
 														       </div>
 														       <div class="collapse show" id="collapse-4" data-parent="#accordion4">
 														       		<div class="accordion-item-body">
-														              <p>- <a href="https://pilot.duni.io">두니(DUNI)</a> : 드론 SW 및 데이터 서비스 플랫폼</p>
-														              <p>드론 서비스 기업이 요구하는 SW를 제공하고 전문가 기술을 연결하여 드론 서비스 기업들이 다양한 수요에 대응할 수 있고 역량을 확장할 수 있는 빅데이터, AI, AR 기반의 기술 연결 및 데이터 서비스 플랫폼</p>
+														              <p>- <a href="https://duni.io">두니(DUNI)</a> : 드론 서비스 수요 중개 플랫폼</p>
+														              <p>드론 서비스 기업들에게 다양한 드론 서비스 수요를 연결하는 플랫폼</p>
 														          </div>
 														          
 														       		<div class="accordion-item-body">
@@ -222,8 +222,8 @@
 														          </div>														          														          
 														          
 																			<div class="accordion-item-body">
-														              <p>- <a href="https://duni.io">두니 링크(DUNI-L)</a> : 드론 서비스 기업의 역량강화와 성장을 위한 기술연결 서비스 플랫폼</p>
-														              <p>드론 서비스 기업이 요구하는 SW를 제공하고 전문가 기술을 연결하여 드론 서비스 기업들이 다양한 수요에 대응할 수 있고 역량을 확장할 수 있는 플랫폼</p>
+														              <p>- <a href="https://pilot.duni.io">두니 파일럿 센터</a> : 드론 서비스 기업의 역량강화 지원 플랫폼</p>
+														              <p>드론 서비스 기업과 개인의 역량 강화/성장을 위한 수익 창출 및 기술 연결 플랫폼</p>
 														          </div>														
 
 														          <div class="accordion-item-body">
