--- a/symbol/index.html
+++ b/symbol/index.html
@@ -189,7 +189,7 @@
 													       <div class="collapse show" id="collapse-5" data-parent="#accordion5">
 													          <div class="accordion-item-body">
 													              <p>
-													              	드론 서비스 기업이 요구하는 SW를 제공합니다. 전문가 기술을 연결하여 드론 서비스 기업들이 다양한 수요에 대응할 수 있고 역량을 확장할 수 있는 빅데이터, AI, AR 기반의 기술 연결 및 데이터 서비스 플랫폼을 개발합니다.
+													              	드론 서비스 기업이 요구하는 SW를 제공합니다. 전문가 기술을 연결하여 드론 서비스 기업들이 다양한 수요에 대응할 수 있고 수익을 창출 할 수 있으며 역량 강화 및 성장을 돕는 빅데이터, AI, AR 기반의 기술 연결 및 데이터 서비스 플랫폼을 개발합니다.
 													              </p>
 													          </div>
 													       </div>
