--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                                 </div>
                                 <div class="icon-box-content">
                                     <p>
-                                    드론 파일럿의 역량 강화 지원 플랫폼
+                                    드론 파일럿의 역량강화 및 수익창출 지원 플랫폼
                         						</p>
 
 																		<p>
@@ -264,6 +264,26 @@
 																			<a href="https://www.facebook.com/duniplatform/" target="new"><i class="ti-facebook"></i></a>&nbsp;&nbsp;
                                   		<a href="https://www.instagram.com/duni_aply/" target="new"><i class="ti-instagram"></i></a>&nbsp;&nbsp;
 					                        		<a href="https://blog.naver.com/duniplatform?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign" target="new"><i class="ti-rss"></i></a>
+                                  	</p>
+                                </div>
+                            </div>
+                        </div>
+                        
+                        <div class="col-lg-6 col-md-6">
+                            <div class="icon-box icon-box-left">                                
+                            		<div class="icon-box-icon"><img src="assets/images/widgets/5.png" border=0></div>
+                                <div class="icon-box-title">
+                                    <a href="https://dunistock.com/?utm_source=aply_homepage&utm_medium=title&utm_campaign=not_campaign" target="new">DUNI 스탁</a>
+                                </div>
+                                <div class="icon-box-content">
+                                    <p>
+                                    드론 영상 공급/판매 서비스
+                        						</p>
+
+																		<p>
+																			<a href="https://dunistock.com/?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign" target="new"><i class="ti-link"></i></a>
+																			<a href="https://www.youtube.com/channel/UCOhNUci1UJ3YsyEf2WrZSEA" target="new"><i class="ti-youtube"></i></a>&nbsp;&nbsp;
+																			<a href="https://www.instagram.com/duni_aply/" target="new"><i class="ti-instagram"></i></a>&nbsp;&nbsp;
                                   	</p>
                                 </div>
                             </div>
