서비스 소개 파트 - 모바일 정렬 이상한 부분 재정리

--- a/index.html
+++ b/index.html
@@ -321,49 +321,47 @@
                             <h3>그 외 APLY의 서비스</h3>
                         </div>
                     
-		                    <div class="row">
-		                        <div class="col-md-6">
-		                            <div class="icon-box icon-box-left">
-		                                <div class="icon-box-icon"><img src="assets/images/widgets/3.png" border=0></div>
-		                                <div class="feature-content">
-		                                    <h6>드로미 (DROMI)</h6>
-		                                    <p>경량 드론을 활용한 농사시설물 모니터링 서비스</p>
-		                                    <p>
-		                                      <a href="https://dromi.aply.biz/?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign" target="new"><i class="ti-link"></i></a>&nbsp;&nbsp;
-		                                      <a href="https://www.facebook.com/드로미-393689674813641" target="new"><i class="ti-facebook"></i></a>
-		                                    </p>
-		                                </div>
-		                            </div>
-		                        </div>
-		                        <div class="col-md-6">
-		                            <div class="icon-box icon-box-left">
-		                                <div class="icon-box-icon"><img src="assets/images/widgets/2.png" border=0></div>
-		                                <div class="feature-content">
-		                                    <h6>두런두런 (DRDR)</h6>
-		                                    <p>논/밭의 진솔한 이야기를 담는 감성 브랜딩 서비스</p>
-		                                    <p>
-		                                      <a href="https://drdr.io/?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign" target="new"><i class="ti-link"></i></a>&nbsp;&nbsp;
-		                                      <a href="https://www.facebook.com/두런두런-334464897347449" target="new"><i class="ti-facebook"></i></a>&nbsp;&nbsp;
-		                                      <a href="https://www.instagram.com/drdr_aply/" target="new"><i class="ti-instagram"></i></a>
-		                                    </p>
-		                                </div>
-		                            </div>
-		                        </div>
-		                        <div class="col-md-6">
-		                            <div class="icon-box icon-box-left">
-		                                <div class="icon-box-icon"><img src="assets/images/widgets/1.png" border=0></div>
-		                                <div class="feature-content">
-		                                    <h6>두근두근 (DKDK)</h6>
-		                                    <p>친구에게 심박패턴을 전달하는 감성 서비스</p>
-		                                    <p>
-		                        				  		<a href="https://dkdk.io/?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign" target="new"><i class="ti-link"></i></a>&nbsp;&nbsp;
-		                                    	<a href="https://www.facebook.com/dkdkheart/" target="new"><i class="ti-facebook"></i></a>&nbsp;&nbsp;
-		                                  		<a href="https://www.instagram.com/dkdk_aply/" target="new"><i class="ti-instagram"></i></a>
-		                                  	</p>
-		                                </div>
-		                            </div>
-		                        </div>
-		                    </div>
+                        <div class="col-lg-6 col-md-6">
+                            <div class="icon-box icon-box-left">
+                                <div class="icon-box-icon"><img src="assets/images/widgets/3.png" border=0></div>
+                                <div class="feature-content">
+                                    <h6>드로미 (DROMI)</h6>
+                                    <p>경량 드론을 활용한 농사시설물 모니터링 서비스</p>
+                                    <p>
+                                      <a href="https://dromi.aply.biz/?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign" target="new"><i class="ti-link"></i></a>&nbsp;&nbsp;
+                                      <a href="https://www.facebook.com/드로미-393689674813641" target="new"><i class="ti-facebook"></i></a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6">
+                            <div class="icon-box icon-box-left">
+                                <div class="icon-box-icon"><img src="assets/images/widgets/2.png" border=0></div>
+                                <div class="feature-content">
+                                    <h6>두런두런 (DRDR)</h6>
+                                    <p>논/밭의 진솔한 이야기를 담는 감성 브랜딩 서비스</p>
+                                    <p>
+                                      <a href="https://drdr.io/?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign" target="new"><i class="ti-link"></i></a>&nbsp;&nbsp;
+                                      <a href="https://www.facebook.com/두런두런-334464897347449" target="new"><i class="ti-facebook"></i></a>&nbsp;&nbsp;
+                                      <a href="https://www.instagram.com/drdr_aply/" target="new"><i class="ti-instagram"></i></a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6">
+                            <div class="icon-box icon-box-left">
+                                <div class="icon-box-icon"><img src="assets/images/widgets/1.png" border=0></div>
+                                <div class="feature-content">
+                                    <h6>두근두근 (DKDK)</h6>
+                                    <p>친구에게 심박패턴을 전달하는 감성 서비스</p>
+                                    <p>
+                        				  		<a href="https://dkdk.io/?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign" target="new"><i class="ti-link"></i></a>&nbsp;&nbsp;
+                                    	<a href="https://www.facebook.com/dkdkheart/" target="new"><i class="ti-facebook"></i></a>&nbsp;&nbsp;
+                                  		<a href="https://www.instagram.com/dkdk_aply/" target="new"><i class="ti-instagram"></i></a>
+                                  	</p>
+                                </div>
+                            </div>
+                        </div>
 		              </div>
                 </div>
             </section>
