사파리에서 영상부분 깨지는 오류 수정

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <!-- Wrapper-->
         <div class="wrapper">
             <!-- Hero-->
-            <section class="module-cover parallax fullscreen text-center" data-background="assets/images/module-2.jpg" data-overlay="0.45">
+            <section class="module-cover parallax fullscreen text-center">
                 <div class="container" id="ytbg1" data-ytbg-fade-in="true" data-youtube="https://www.youtube.com/watch?v=jVnmsM_8BEg"></div>
                 <div class="container">
 	                <div class="row">
