--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <!-- Wrapper-->
         <div class="wrapper">
             <!-- Hero-->
-            <section class="module-cover parallax fullscreen text-center">
+            <section class="module-cover parallax fullscreen text-center" data-overlay="0.45">
                 <div class="container" id="ytbg1" data-ytbg-fade-in="true" data-youtube="https://www.youtube.com/watch?v=jVnmsM_8BEg"></div>
                 <div class="container">
 	                <div class="row">
@@ -396,6 +396,19 @@
                         </div>
                     </div>
                     <div class="row">
+                    		<div class="col-lg-4 col-md-6">
+                            <div class="icon-box icon-box-left">
+                                <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
+                                <div class="icon-box-title">
+                                    <h6>2021-07</h6>
+                                </div>
+                                <div class="icon-box-content">
+                                    <p>주식회사 로보라이프와 업무협약
+                                    <p>
+                                </div>
+                            </div>
+                        </div>
+                        
                     		<div class="col-lg-4 col-md-6">
                             <div class="icon-box icon-box-left">
                                 <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
