잘못된 태그 닫힘 수정

--- a/index.html
+++ b/index.html
@@ -403,8 +403,7 @@
                                     <h6>2021-07</h6>
                                 </div>
                                 <div class="icon-box-content">
-                                    <p>주식회사 로보라이프와 업무협약
-                                    <p>
+                                    <p>주식회사 로보라이프와 업무협약</p>
                                 </div>
                             </div>
                         </div>
@@ -416,8 +415,7 @@
                                     <h6>2021-06</h6>
                                 </div>
                                 <div class="icon-box-content">
-                                    <p>주식회사 에이브레인과 업무협약
-                                    <p>
+                                    <p>주식회사 에이브레인과 업무협약</p>
                                 </div>
                             </div>
                         </div>
@@ -431,7 +429,7 @@
                                 <div class="icon-box-content">
                                     <p>주식회사 SIIS와 업무협약,<br>
                                     주식회사 블랫폼과 업무협약
-                                    <p>
+                                  	</p>
                                 </div>
                             </div>
                         </div>
@@ -442,7 +440,7 @@
                                     <h6>2020-12</h6>
                                 </div>
                                 <div class="icon-box-content">
-                                    <p>산업통상자원부 주최 / 한국디자인진흥원(KIDP) 주관 SOCIAL DESIGN DEMODAY - 혁신우수기업 수상<p>
+                                    <p>산업통상자원부 주최 / 한국디자인진흥원(KIDP) 주관 SOCIAL DESIGN DEMODAY - 혁신우수기업 수상</p>
                                 </div>
                             </div>
                         </div>
@@ -454,7 +452,7 @@
                                     <h6>2020-11</h6>
                                 </div>
                                 <div class="icon-box-content">
-                                    <p>MYSC 엠와이소셜컴퍼니 임팩트 투자 유치<p>
+                                    <p>MYSC 엠와이소셜컴퍼니 임팩트 투자 유치</p>
                                 </div>
                             </div>
                         </div>
@@ -466,7 +464,7 @@
                                     <h6>2020-08</h6>
                                 </div>
                                 <div class="icon-box-content">
-                                    <p>벤처기업 인증<p>
+                                    <p>벤처기업 인증</p>
                                 </div>
                             </div>
                         </div>
