--- a/index.html
+++ b/index.html
@@ -747,6 +747,13 @@
 
                 		<div class="row">
                 			
+                			<div class="col-lg-4 col-md-6">
+			                            <div class="icon-box icon-box-left">
+			                                <div class="icon-box-title">
+			                                    <p><a href="https://www.robolife.co.kr/" target=new>(주)로보라이프</a></p>
+			                                </div>
+			                            </div>
+			                </div>
                 			
                 			<div class="col-lg-4 col-md-6">
 			                            <div class="icon-box icon-box-left">
