티릴리와 업무협약 내용 추가

--- a/index.html
+++ b/index.html
@@ -403,7 +403,9 @@
                                     <h6>2021-07</h6>
                                 </div>
                                 <div class="icon-box-content">
-                                    <p>주식회사 로보라이프와 업무협약</p>
+                                    <p>주식회사 로보라이프와 업무협약,<br>
+					주식회사 티릴리와 업무협약
+					</p>
                                 </div>
                             </div>
                         </div>
@@ -750,7 +752,15 @@
                 			<div class="col-lg-4 col-md-6">
 			                            <div class="icon-box icon-box-left">
 			                                <div class="icon-box-title">
-			                                    <p><a href="https://www.robolife.co.kr/" target=new>(주)로보라이프</a></p>
+			                                    <p><a href="https://www.tirrilee.kr/" target=new>(주)티릴리</a></p>
+			                                </div>
+			                            </div>
+			                </div>
+
+                			<div class="col-lg-4 col-md-6">
+			                            <div class="icon-box icon-box-left">
+			                                <div class="icon-box-title">
+			                                    <p><a href="http://www.robolife.co.kr/" target=new>(주)로보라이프</a></p>
 			                                </div>
 			                            </div>
 			                </div>
