레이아웃 안맞는 부분 정리

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                         						</p>
 
 																		<p>
-																			<a href="https://dunistock.com/?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign" target="new"><i class="ti-link"></i></a>
+																			<a href="https://dunistock.com/?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign" target="new"><i class="ti-link"></i></a>&nbsp;&nbsp;
 																			<a href="https://www.youtube.com/channel/UCOhNUci1UJ3YsyEf2WrZSEA" target="new"><i class="ti-youtube"></i></a>&nbsp;&nbsp;
 																			<a href="https://www.instagram.com/duni_aply/" target="new"><i class="ti-instagram"></i></a>&nbsp;&nbsp;
                                   	</p>
