--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 
             <!-- Features-->
             <section class="module-cover parallax fullscreen text-center" data-background="assets/images/module-2.jpg" data-overlay="0.45">
-                <div class="container" id="ytbg2" data-ytbg-fade-in="true" data-youtube="https://www.youtube.com/watch?v=L6NgEkfEqHA"></div>
+                <div class="container" id="ytbg2" data-ytbg-fade-in="true" data-youtube="https://www.youtube.com/watch?v=2iR5_jylF90"></div>
                 <div class="container">
                 	<div class="row align-items-center">
 
