텍스트 애니 추가

--- a/index.html
+++ b/index.html
@@ -128,14 +128,9 @@
                 <div class="container">
 	                <div class="row">
 	                        <div class="col-md-12">
-	                            <h1 class="ml15">
-																  <span class="word">advanced platform
-																  <span class="word">to fly</span>
-															</h1>
-
-															<div class="col-md-10 m-auto text-center">
-	                            	<h5>APLY는 보다 진보된 기술로 재미있고 멋진 서비스를 연구하고 개발합니다</h5>
-	                        		</div>
+                            <h4>
+                              <span is="type-async" id="title_text">...</span><span class="blinking-cursor">_</span>
+                            </h4>
 	                        </div>
 	                    </div>
 	              </div>
@@ -153,7 +148,7 @@
                         	<div class="accordion" id="accordion1">
 	                        		<div class="accordion-item">
 														       <div class="accordion-item-header">
-														          <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-1">Drone, Everywhere</a></h6>
+														          <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-1"><span is="type-async" id="small_text_1">Drone, Everywhere</span><span class="blinking-cursor">_</span></a></h6>
 														       </div>
 														       <div class="collapse show" id="collapse-1" data-parent="#accordion1">
 														          <div class="accordion-item-body">
@@ -174,7 +169,7 @@
                         	<div class="accordion" id="accordion2">
                             <div class="accordion-item">
 													       <div class="accordion-item-header">
-													          <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-2">Vision, AR, Bigdata, AI</a></h6>
+													          <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-2"><span is="type-async" id="small_text_2">Vision, AR, Bigdata, AI</span><span class="blinking-cursor">_</span></a></h6>
 													       </div>
 													       <div class="collapse show" id="collapse-2" data-parent="#accordion2">
 													          <div class="accordion-item-body">
@@ -201,7 +196,7 @@
 	                      	<div class="accordion" id="accordion3">
 	                            <div class="accordion-item">
 														       <div class="accordion-item-header">
-														          <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-3">Emotional Communication Technology</a></h6>
+														          <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-3"><span is="type-async" id="small_text_3">Emotional Communication Technology</span><span class="blinking-cursor">_</span></a></h6>
 														       </div>
 														       <div class="collapse show" id="collapse-3" data-parent="#accordion3">
 														          <div class="accordion-item-body">
@@ -223,8 +218,8 @@
                             <p class="m-b-30"><img src="assets/images/main/products.png" alt=""></p>
                         </div>
                         <div class="col-lg-6 offset-lg-1">
-                            <h5>Drone, Everywhere.</h5>
-                            <p class="lead">드론 기업과 개인의 성장, 역량 강화를 돕는<br> 서비스 수요 및 기술 연결 플랫폼 : DUNI (Drone Universe)</p>
+                            <h5>DUNI : Drone Universe<span class="blinking-cursor">_</span></h5>
+                            <p class="lead">드론 기업과 개인의 성장, 역량 강화를 돕는<br> 서비스 수요 및 기술 연결 플랫폼</p>
                         </div>
 
                         <div class="col-lg-6 col-md-6">
@@ -386,7 +381,7 @@
                         </div>
                         <div class="col-lg-5 offset-lg-1">
                             <h2>History</h2>
-                            <p class="lead">좀 더 재미있게, 즐겁게 일하기 위한 진보된 플랫폼이 걸어온 길</p>
+                            <p class="lead">좀 더 재미있게, 즐겁게 일하기 위한 진보된 플랫폼이 걸어온 길<span class="blinking-cursor">_</span></p>
 
                         </div>
                     </div>
@@ -404,8 +399,8 @@
                                 </div>
                                 <div class="icon-box-content">
                                     <p>주식회사 로보라이프와 업무협약,<br>
-					주식회사 티릴리와 업무협약
-					</p>
+                          					주식회사 티릴리와 업무협약
+                          					</p>
                                 </div>
                             </div>
                         </div>
@@ -743,7 +738,7 @@
 
                     <div class="row">
                         <div class="col-md-6 m-auto text-center">
-                            <h2>APLY의 파트너</h2>
+                            <h2>APLY의 파트너<span class="blinking-cursor">_</span></h2>
                         </div>
                     </div>
 
@@ -1192,9 +1187,9 @@
         <script src="assets/js/custom/jquery-3.2.1.min.js"></script>
         <script src="assets/js/custom/popper.min.js"></script>
         <script src="assets/js/bootstrap/bootstrap.min.js"></script>
-        <script src="assets/js/custom/plugins.min.js"></script>        
+        <script src="assets/js/custom/plugins.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
         <script src="assets/js/custom/jquery.youtube-background.js?v=1.0.7"></script>
-        <script src="assets/js/custom/custom.js"></script>        
+        <script src="assets/js/custom/custom.js"></script>
     </body>
 </html>
