텍스트 애니 효과 수정, 문구 추가

--- a/index.html
+++ b/index.html
@@ -137,6 +137,17 @@
             </section>
             <!-- Hero end-->
 
+            <!-- Features-->
+            <section class="module bg-white text-center">
+                <div class="container">
+                	<div class="row align-items-center">
+                        <div class="col-lg-12 m-auto text-center">
+                            <h4><b>즐겁고 재미있게 일하기 위한 진보된 플랫폼<span class="blinking-cursor">_</span></b></h4>
+                        </div>
+                </div>
+              </div>
+            </section>
+
             <!-- Modal-->
             <section class="module bg-white">
                 <div class="container">
@@ -313,7 +324,7 @@
                 	<div class="row align-items-center">
 
                         <div class="col-lg-12 m-auto text-center">
-                            <h3>그 외 APLY의 서비스</h3>
+                            <h3>그 외 APLY의 서비스<span class="blinking-cursor">_</span></h3>
                         </div>
 
                         <div class="col-lg-6 col-md-6">
@@ -380,8 +391,8 @@
                             <p class="m-b-30"><img src="assets/images/main/mega-mockup.png" alt=""></p>
                         </div>
                         <div class="col-lg-5 offset-lg-1">
-                            <h2>History</h2>
-                            <p class="lead">좀 더 재미있게, 즐겁게 일하기 위한 진보된 플랫폼이 걸어온 길<span class="blinking-cursor">_</span></p>
+                            <h2>History<span class="blinking-cursor">_</span></h2>
+                            <p class="lead">좀 더 재미있게, 즐겁게 일하기 위한 진보된 플랫폼이 걸어온 길</p>
 
                         </div>
                     </div>
