사파리에서 동작안하는 텍스트 에니 삭제

--- a/index.html
+++ b/index.html
@@ -53,16 +53,6 @@
         <link href="assets/css/plugins.min.css" rel="stylesheet">
         <!-- Template core CSS-->
         <link href="assets/css/template.css" rel="stylesheet">
-        <style>
-        	.ml15 {
-
-					}
-
-					.ml15 .word {
-					  display: inline-block;
-					  line-height: 1em;
-					}
-        </style>
     </head>
     <body>
         <div id="fb-root"></div>
@@ -129,7 +119,7 @@
 	                <div class="row">
 	                        <div class="col-md-12">
                             <h4>
-                              <span is="type-async" id="title_text">...</span><span class="blinking-cursor">_</span>
+                              <span class="title_text"></span><span class="blinking-cursor">_</span>
                             </h4>
 	                        </div>
 	                    </div>
@@ -159,7 +149,7 @@
                         	<div class="accordion" id="accordion1">
 	                        		<div class="accordion-item">
 														       <div class="accordion-item-header">
-														          <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-1"><span is="type-async" id="small_text_1">Drone, Everywhere</span><span class="blinking-cursor">_</span></a></h6>
+														          <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-1"><span id="small_text_1">Drone, Everywhere</span><span class="blinking-cursor">_</span></a></h6>
 														       </div>
 														       <div class="collapse show" id="collapse-1" data-parent="#accordion1">
 														          <div class="accordion-item-body">
@@ -180,7 +170,7 @@
                         	<div class="accordion" id="accordion2">
                             <div class="accordion-item">
 													       <div class="accordion-item-header">
-													          <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-2"><span is="type-async" id="small_text_2">Vision, AR, Bigdata, AI</span><span class="blinking-cursor">_</span></a></h6>
+													          <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-2"><span id="small_text_2">Vision, AR, Bigdata, AI</span><span class="blinking-cursor">_</span></a></h6>
 													       </div>
 													       <div class="collapse show" id="collapse-2" data-parent="#accordion2">
 													          <div class="accordion-item-body">
@@ -207,7 +197,7 @@
 	                      	<div class="accordion" id="accordion3">
 	                            <div class="accordion-item">
 														       <div class="accordion-item-header">
-														          <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-3"><span is="type-async" id="small_text_3">Emotional Communication Technology</span><span class="blinking-cursor">_</span></a></h6>
+														          <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-3"><span  id="small_text_3">Emotional Communication Technology</span><span class="blinking-cursor">_</span></a></h6>
 														       </div>
 														       <div class="collapse show" id="collapse-3" data-parent="#accordion3">
 														          <div class="accordion-item-body">
