텍스트 애니 추가

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         	<div class="accordion" id="accordion1">
 	                        		<div class="accordion-item">
 														       <div class="accordion-item-header">
-														          <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-1"><span id="small_text_1">Drone, Everywhere</span><span class="blinking-cursor">_</span></a></h6>
+														          <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-1"><span id="small_text_1"></span><span class="blinking-cursor">_</span></a></h6>
 														       </div>
 														       <div class="collapse show" id="collapse-1" data-parent="#accordion1">
 														          <div class="accordion-item-body">
@@ -170,7 +170,7 @@
                         	<div class="accordion" id="accordion2">
                             <div class="accordion-item">
 													       <div class="accordion-item-header">
-													          <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-2"><span id="small_text_2">Vision, AR, Bigdata, AI</span><span class="blinking-cursor">_</span></a></h6>
+													          <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-2"><span id="small_text_2"></span><span class="blinking-cursor">_</span></a></h6>
 													       </div>
 													       <div class="collapse show" id="collapse-2" data-parent="#accordion2">
 													          <div class="accordion-item-body">
@@ -197,7 +197,7 @@
 	                      	<div class="accordion" id="accordion3">
 	                            <div class="accordion-item">
 														       <div class="accordion-item-header">
-														          <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-3"><span  id="small_text_3">Emotional Communication Technology</span><span class="blinking-cursor">_</span></a></h6>
+														          <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-3"><span  id="small_text_3"></span><span class="blinking-cursor">_</span></a></h6>
 														       </div>
 														       <div class="collapse show" id="collapse-3" data-parent="#accordion3">
 														          <div class="accordion-item-body">
