--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 														       </div>
 														       <div class="collapse show" id="collapse-1" data-parent="#accordion1">
 														          <div class="accordion-item-body">
-														              <p>드론 기업이 요구하는 SW를 제공하고 서비스 수요와 전문가 기술을 연결하여 드론 기업과 개인의 성장, 역량 강화를 돕는 빅데이터, AI, AR 기반의 드론 SW 플랫폼을 개발합니다.<p>
+														              <p>드론 기업에 SW와 기술을 제공하고 서비스 수요와 전문가 기술을 연결하여 드론 기업과 개인의 성장, 역량강화를 돕는 빅데이터, AI, AR 기반의 드론 서비스 플랫폼을 개발합니다.<p>
 														          </div>
 														       </div>
 														  </div>
@@ -174,7 +174,7 @@
 													       </div>
 													       <div class="collapse show" id="collapse-2" data-parent="#accordion2">
 													          <div class="accordion-item-body">
-													              <p>데이터를 이해하고, 가치를 발굴하고, 인공지능을 디자인 합니다.<br>AR, 드론의 영상 데이터 분석, 이상탐지(Anomaly Detection) 기술을 활용하여 좀 더 간편하게 문제를 확인하고 인사이트를 얻을 수 있는 방법을 연구합니다.</p>
+													              <p>데이터를 이해하고, 가치를 발굴하고, 인공지능을 디자인 합니다.<br>AR, 드론의 영상 데이터 분석, 이상탐지(Anomaly Detection) 기술을 활용하여 좀 더 간편하게 문제를 확인하고 인사이트를 얻을 수 있는 방법을 연구하고 제공합니다.</p>
 													          </div>
 													       </div>
 													  </div>
@@ -201,7 +201,7 @@
 														       </div>
 														       <div class="collapse show" id="collapse-3" data-parent="#accordion3">
 														          <div class="accordion-item-body">
-														              <p>아주 감성적이며 재미있는 소통 기술을 연구하고 개발합니다.<br>그리운 사람, 마음을 표현하고 싶은 상대에게 간편하게 마음을 전할 수 있는 재미있는 방법들을 제공합니다.</p>
+														              <p>최신 기술과 트렌드를 끊임없이 학습하고 문제와 요구사항을 정확하게 이해하여 불편없이 사용할 수 있는 SW와 HW를 개발합니다.</p>
 														          </div>
 														       </div>
 														  </div>
