채용페이지의 로고 이미지 링크 오류 수정

--- a/recruit/index.html
+++ b/recruit/index.html
@@ -87,7 +87,7 @@
         <header class="header header-transparent">
             <div class="container-fluid">
                 <!-- Brand-->
-                <div class="inner-header"><a class="inner-brand" href="../index.html"><img src="assets/images/logo_white.png" border=0 width=70 id="top_logo"></a></div>
+                <div class="inner-header"><a class="inner-brand" href="../index.html"><img src="../assets/images/logo_white.png" border=0 width=70 id="top_logo"></a></div>
                 <!-- Navigation-->
                 <div class="inner-navigation collapse">
                     <div class="inner-nav">
