--- a/index.html
+++ b/index.html
@@ -139,10 +139,7 @@
         <!-- Hero end-->
 
         <!-- Features-->
-        <section class="module-cover parallax fullscreen text-center" data-background="assets/images/module-2.jpg"
-            data-overlay="0.25">
-            <div class="container" id="ytbg2" data-ytbg-fade-in="true"
-                data-youtube="https://www.youtube.com/watch?v=DZcCOVd8o6c"></div>
+        <section class="module bg-white text-center">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-12 m-auto text-center">
@@ -151,7 +148,6 @@
                 </div>
             </div>
         </section>
-        <!-- Features end-->
 
         <!-- Modal-->
         <section class="module bg-white">
