--- a/index.html
+++ b/index.html
@@ -1087,64 +1087,21 @@
 
 
 
-        <!-- Services-->
-        <!--
-            <section class="module-cover parallax text-center fullscreen" data-background="assets/images/main/comm2.png" data-overlay="0.6">
-                <div class="container">
+        <!-- Features-->
+        <section class="module-cover parallax fullscreen text-center" data-background="assets/images/module-2.jpg"
+            data-overlay="0.25">
+            <div class="container" id="ytbg2" data-ytbg-fade-in="true"
+                data-youtube="https://www.youtube.com/watch?v=DZcCOVd8o6c"></div>
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-12 m-auto text-center">
+                        <h5><b>Drone, Everywhere.<BR>APLY가 준비하고 있습니다<span class="blinking-cursor">_</span></b></h5>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Features end-->
 
-                	<div class="row align-items-center">
-                        <div class="col-lg-5">
-                            <p class="m-b-30"><img src="assets/images/main/community.png" alt=""></p>
-                        </div>
-                        <div class="col-lg-6 offset-lg-1">
-														<h5>APLY가 후원하는 커뮤니티</h5>
-                            <p class="lead">재미있는 아이디어를 후원하거나 기술 공헌 활동을 하고 있습니다</p>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6">
-                            <div class="icon-box icon-box-left">
-                                <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
-                                <div class="icon-box-title">
-                                    <a href="https://pilot.duni.io/" target="new">DUNI PILOT</a>
-                                </div>
-                                <div class="icon-box-content">
-                                    <p>
-                                    드론을 세계일주 시키자!
-                        				    </p>
-                        				    <p>
-                        				    멋진 경관을 촬영했던 비행영상과 비행기록을 확인할 수 있으며 드론SW 개발을 위한 기술을 제공하는 커뮤니티 입니다.
-                        				    </p>
-                        				  	<p>
-                                    	<a href="https://top.droneplay.io" target="new"><i class="ti-link"></i></a>&nbsp;&nbsp;
-                                    	<a href="https://www.facebook.com/groups/dunipilot/" target="new"><i class="ti-facebook"></i></a>
-                                  	</p>
-                                </div>
-                            </div>
-                        </div>
-                				<div class="col-lg-4 col-md-6">
-                						<div class="icon-box icon-box-left">
-                                <div class="icon-box-icon"><span class="ti-eye"></span></div>
-                                <div class="icon-box-title">
-                                    <a href="https://www.facebook.com/noonting2019" target="new">NoonTing</a>
-                                </div>
-                                <div class="icon-box-content">
-                                    <p>
-                                    온라인에서 눈싸움을!
-                        				    </p>
-                        				    <p>
-                        				    스마트폰으로 친구와 눈싸움(Eye-staring game)을 하는 재미있는 게임을 개발하기 위한 모임입니다.
-                        				    </p>
-                        				  	<p>
-                                    	<a href="https://www.facebook.com/noonting2019" target="new"><i class="ti-link"></i></a>&nbsp;&nbsp;
-                                    	<a href="https://www.facebook.com/noonting2019" target="new"><i class="ti-facebook"></i></a>
-                                  	</p>
-                                </div>
-                            </div>
-                        </div>
-										</div>
-								</div>
-						</section>
-						-->
 
         <!-- Counters-->
         <section class="module" id="section-location">
@@ -1184,8 +1141,7 @@
                                         </font>
                                     </a>
                                 </div>
-                                <div class="textwidget">
-                                    <p>즐겁고 재미있게 일하기 위한 진보된 플랫폼을 만나보세요.</p>
+                                <div class="textwidget">                                    
                                     <p>
                                         Office: S426/S427, 4F, 115, Wangsimni-ro, Seongdong-gu, Seoul, Republic of Korea
                                         / 04768
