지도위에 유튜브 영상 섹션 - 문구 띄어쓰기 수정

--- a/index.html
+++ b/index.html
@@ -1095,7 +1095,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-12 m-auto text-center">
-                        <h5><b>Drone, Everywhere.<BR>APLY가 준비하고 있습니다<span class="blinking-cursor">_</span></b></h5>
+                        <h5><b>Drone, Everywhere.<BR>&nbsp;APLY가 준비하고 있습니다<span class="blinking-cursor">_</span></b></h5>
                     </div>
                 </div>
             </div>
