채용페이지 포트폴리오 섹션, 랜딩페이지 하단 섹션 문구 수정

--- a/recruit/index.html
+++ b/recruit/index.html
@@ -178,7 +178,7 @@
                                       <div class="col-lg-2 p-b-10"><input type="checkbox" id="min_type_3" name="min_type_3" value="제작"><label class="lab_check" for="min_type_3"><span class="checkbox"></span> HW개발</label></div>
                                       <div class="col-lg-2 p-b-10"><input type="checkbox" id="min_type_4" name="min_type_4" value="체험"><label class="lab_check" for="min_type_4"><span class="checkbox"></span> 마케팅</label></div>
                                       <div class="col-lg-2 p-b-10"><input type="checkbox" id="min_type_5" name="min_type_5" value="체험"><label class="lab_check" for="min_type_5"><span class="checkbox"></span> 디자인</label></div>
-                                      <div class="col-lg-2 p-b-10"><input type="checkbox" id="min_type_6" name="min_type_6" value="체험"><label class="lab_check" for="min_type_6"><span class="checkbox"></span> 기획</label></div>                                      
+                                      <div class="col-lg-2 p-b-10"><input type="checkbox" id="min_type_6" name="min_type_6" value="체험"><label class="lab_check" for="min_type_6"><span class="checkbox"></span> 기획</label></div>
                                     </div>
                                   </div>
                                   <p class="help-block text-danger"></p>
@@ -402,10 +402,9 @@
                                         <ul class="social-icons">
                                             <li><a href="https://www.instagram.com/aplyplatform"><i class="fab fa-instagram"></i></a></li>
                                             <li><a href="https://www.facebook.com/APLYPLATFORM"><i class="fab fa-facebook-f"></i></a></li>
-					    <li><a href="https://blog.naver.com/duniplatform"><span class="ti-rss"></a></li>
-					    <li><a href="https://kr.linkedin.com/company/aplyplatform"><i class="fab fa-linkedin"></i></a></li>
-					    <li></li>
-                                            <li><div colorscheme="dark" class="fb-like" data-href="https://facebook.com/aplyplatform" data-width="300" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div></i>
+                              					    <li><a href="https://blog.naver.com/duniplatform"><span class="ti-rss"></a></li>
+                              					    <li><a href="https://kr.linkedin.com/company/aplyplatform"><i class="fab fa-linkedin"></i></a></li>
+                                            <li><div colorscheme="dark" class="fb-like" data-href="https://facebook.com/aplyplatform" data-width="300" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div></li>
                                         </ul>
                                     </div>
                                 </aside>
@@ -417,24 +416,48 @@
 
                             </div>
                             <div class="col-md-3">
-                                <!-- Recent works-->
-                                <aside class="widget widget-recent-works">
-                                    <div class="widget-title">
-                                        <h6>Portfolio</h6>
-                                    </div>
-                                    <ul>
-                                        <li><a href="https://drdr.io" target=_new><img src="../assets/images/widgets/2.png" alt="두런두런" style="height:30px;width:100px"></a></li>
-                                        <li><a href="https://dromi.aply.biz" target=_new><img src="../assets/images/widgets/3.png" alt="드로미" style="height:30px;width:60px"></a></li>
-                                    </ul>
-                                    <ul>
-                                        <li><a href="https://dkdk.io" target=_new><img src="../assets/images/widgets/1.png" alt="두근두근" style="height:25px;width:70px"></a></li>
-                                        <li><a href="https://duni.io" target=_new><img src="../assets/images/widgets/4.png" alt="DUNI" style="height:20px;width:70px"></a></li>
-                                    </ul>
-                                    <ul>
-                                        <li><a href="https://pilot.duni.io/center" target=_new><img src="../assets/images/widgets/4.png" alt="DUNI" style="height:15px;width:60px"><br><b>파일럿 센터</b></a></li>
-                                        <li><a href="https://developer.duni.io" target=_new><img src="../assets/images/widgets/4.png" alt="DUNI" style="height:15px;width:60px"><br><b>개발자</b></a></li>
-                                    </ul>
-                                </aside>
+                              <!-- Recent works-->
+                              <aside class="widget widget-recent-works">
+                                  <div class="widget-title">
+                                      <h6>Portfolio</h6>
+                                  </div>
+                                  <ul>
+                                      <li><a href="https://duni.io/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
+                                              target=_new><img src="assets/images/widgets/4.png" alt="DUNI"
+                                                  style="width:45px"><br>
+                                              <div class="widget-title">
+                                                  <H6>DRONE SERVICE</H6>
+                                              </div>
+                                          </a></li>
+                                      <li><a href="https://pilot.duni.io/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
+                                              target=_new><img src="assets/images/widgets/4.png" alt="DUNI"
+                                                  style="width:45px"><br>
+                                              <div class="widget-title">
+                                                  <H6>PILOT CENTER</H6>
+                                              </div>
+                                          </a></li>
+                                  </ul>
+                                  <ul>
+                                      <li><a href="https://developer.duni.io/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
+                                              target=_new><img src="assets/images/widgets/4.png" alt="DUNI"
+                                                  style="width:45px"><br>
+                                              <div class="widget-title">
+                                                  <H6>SW DEVELOPER</H6>
+                                              </div>
+                                          </a></li>
+                                      <li><a href="https://dkdk.io/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
+                                              target=_new><img src="assets/images/widgets/1.png" alt="두근두근"
+                                                  style="width:65px;"></a></li>
+                                  </ul>
+                                  <ul>
+                                      <li><a href="https://dromi.aply.biz/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
+                                              target=_new><img src="assets/images/widgets/3.png" alt="드로미"
+                                                  style="width:53px;"></a></li>
+                                      <li><a href="https://drdr.io/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
+                                              target=_new><img src="assets/images/widgets/2.png" alt="두런두런"
+                                                  style="width:65px;"></a></li>
+                                  </ul>
+                              </aside>
                             </div>
                         </div>
                     </div>
