--- a/index.html
+++ b/index.html
@@ -1095,7 +1095,8 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-12 m-auto text-center">
-                        <h5><b>Drone, Everywhere.<BR>&nbsp;<i>APLY</i>가 준비하고 있습니다<span class="blinking-cursor">_</span></b></h5>
+                        <h5><b>Drone, Everywhere<span class="blinking-cursor">_</span></b></h5>
+                        <h5><b><i>APLY</i>가 준비하고 있습니다.</b></h5>
                     </div>
                 </div>
             </div>
@@ -1141,7 +1142,7 @@
                                         </font>
                                     </a>
                                 </div>
-                                <div class="textwidget">                                    
+                                <div class="textwidget">
                                     <p>
                                         Office: S426/S427, 4F, 115, Wangsimni-ro, Seongdong-gu, Seoul, Republic of Korea
                                         / 04768
